[project]
name = "organization-directory"
version = "0.1.0"
description = "Organization Directory Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy[asyncio]>=2.0.45",
    "uuid7>=0.1.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
]

[tool.mypy]
ignore_missing_imports = true
